# Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.zig  build.zig.zon  vcpkg.json
content/: content.cmake  content.zig
content/resources/shaders/: default.frag  default.vert
engine/: engine.cmake
engine/config/: CMakeLists.txt  config.h  config.h.in
engine/runa/: CMakeLists.txt  main.zig
engine/runa/include/editor/: project.h
engine/runa/src/: main.cpp
engine/runa/src/editor/: project.cpp
engine/runtime/: CMakeLists.txt  input.zig  io.zig  log.zig  opengl.zig  path.zig  runtime.zig  settings.zig  timer.zig  utils.zig
engine/runtime/include/: input.h  runtime.h  settings.h  tick.h  timer.h
engine/runtime/include/io/: event.h  fs.h  handlers.h  loop.h
engine/runtime/include/models/: glft.h
engine/runtime/include/opengl/: camera.h  element_buffer.h  element_count.h  mesh.h  render.h  shader.h  texture.h  vertex_array.h  vertex_buffer.h
engine/runtime/include/utils/: logs.h  system.h
engine/runtime/include/utils/system/: environment.h  file.h  path.h
engine/runtime/src/: input.cpp  runtime.cpp  settings.cpp  tick.cpp  timer.cpp
engine/runtime/src/io/: event.cpp  fs.cpp  handlers.cpp  loop.cpp
engine/runtime/src/models/: glft.cpp
engine/runtime/src/opengl/: camera.cpp  element_buffer.cpp  element_count.cpp  mesh.cpp  render.cpp  shader.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp
engine/runtime/src/utils/: logs.cpp  system.cpp
engine/runtime/src/utils/system/: enviroment.cpp  file.cpp  path.cpp
