set(CONFIG_DIR ${CMAKE_CURRENT_LIST_DIR})

project(config)
file(GLOB_RECURSE CONFIG_SOURCES "${CONFIG_DIR}/*.h")
add_library(config INTERFACE ${CONFIG_SOURCES})
target_include_directories(config
        INTERFACE
        "${CONFIG_DIR}"
)

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    set(ENGINE_BUILD_DEBUG ON)
else()
    set(ENGINE_BUILD_RELEASE ON)
endif()

set(ENGINE_NAME ${CMAKE_PROJECT_NAME})
set(ENGINE_VERSION ${CMAKE_PROJECT_VERSION})
set(ENGINE_MAJOR_VERSION ${CMAKE_PROJECT_VERSION_MAJOR})
set(ENGINE_MINOR_VERSION ${CMAKE_PROJECT_VERSION_MINOR})
set(ENGINE_PATH_VERSION ${CMAKE_PROJECT_VERSION_PATCH})

configure_file(${CONFIG_DIR}/config.h.in ${CONFIG_DIR}/config.h @ONLY)
set_target_properties(config PROPERTIES FOLDER "/engine" LINKER_LANGUAGE CXX)